--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,9 +2,8 @@
     <wb-module deploy-name="gc_sms_mvn">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <property name="context-root" value="gc_sms_mvn"/>
+        <property name="context-root" value="gc_sms"/>
         <property name="java-output-path" value="/gc_sms_mvn/target/classes"/>
     </wb-module>
 </project-modules>
